--- a/app/walkandplay/trunk/build.properties
+++ b/app/walkandplay/trunk/build.properties
@@ -1,19 +1,19 @@
-# $Id: build.properties,v 1.3 2006-06-03 23:17:26 just Exp $
+# $Id: build.properties 173 2006-11-17 11:40:32Z just $
 
-# project props
-project.name=WP
-project.id=wp
+# global project props
+project.name=WalkAndPlay
+project.id=walkandplay
 version=1.0.0
 
-war.name=wp
 
-# specify the directory of the GeoTracing unpacked .war archive
-gt.war.dir=${basedir}/../../../base/trunk/server/build/war
 
-# specify the directory for your (tomcat) webapps
-deploy.test.dir=/var/keyworx/webapps/test.walkandplay.com
-deploy.local.dir=/var/keyworx/webapps/test.walkandplay.com
-deploy.live.dir=/Volumes/homes/httpd/walkandplay.com
+
+
+
+
+
+
+
 
 
 
