allapps: changed host-dependent gmap loading and menu loading (no jsps anymore)

--- a/app/otter/trunk/build.properties
+++ b/app/otter/trunk/build.properties
@@ -1,7 +1,7 @@
 # $Id: build.properties,v 1.3 2006-05-07 21:33:36 just Exp $
 
 # project props
-project.name=Otter
+project.name=OtterTracing
 project.id=otter
 version=1.0.3
 
