base: replace POI with text medium plus tags and migration code for existing POIs

--- a/base/trunk/server/build.xml
+++ b/base/trunk/server/build.xml
@@ -71,6 +71,7 @@ $Id$
 		<pathelement location="${pushlet.jar}"/>
 		<pathelement location="${postgis-jdbc.jar}"/>
 		<pathelement location="${keyworx.jar}"/>
+		<pathelement location="${kwx-tagging.jar}"/>
 		<pathelement location="${servlet.jar}"/>
 	</path>
 
