--- a/app/walkandplay/trunk/build.properties
+++ b/app/walkandplay/trunk/build.properties
@@ -5,6 +5,11 @@ project.name=WalkAndPlay
 project.id=walkandplay
 version=1.0.0
 
+# specify the directory for your (tomcat) webapps
+deploy.local.dir=/var/keyworx/webapps/test.walkandplay.com
+deploy.live.dir=/Volumes/homes/httpd/walkandplay.com
+deploy.test.dir=keyworx@test.waag.org:/var/keyworx/webapps/test.walkandplay.com
+
 
 
 
