base: first version location radar/monitor MobiTracer

--- a/base/trunk/client/mobitracer/build.xml
+++ b/base/trunk/client/mobitracer/build.xml
@@ -127,6 +127,7 @@
 	<target name="obfuscate" depends="compile">
 
 		<java fork="yes" classname="proguard.ProGuard" classpath="${proguard.jar}">
+			<arg line="-dontusemixedcaseclassnames"/>
 			<arg line="-libraryjars ${boot.classpath}:${jsr82.zip}"/>
 			<arg line="-injars ${classes.dir}"/>
 			<arg line="-outjar ${obf.dir}"/>
