--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -62,7 +62,7 @@ postgis-jdbc=postgis-jdbc-1.1.1
 postgis-jdbc.dir=${geotracing.external.dir}/${postgis-jdbc}
 
 # J2ME ProGuard obfuscator - provider: proguard.sourceforge.net
-proguard=proguard
+proguard=proguard-3.6
 proguard.dir=${geotracing.external.dir}/${proguard}
 
 # Pushlets distro  - provider: www.pushlets.com
